# hubomz

./: .gitignore  CMakeLists.txt  HOW_TO-zmp-daemon.txt  HOW_TO-zmpgui.txt  README.md  mzsettings.cmake  patch.sh  run.sh  setup.sh
calibrate/: CMakeLists.txt  CalibMainWindow.cpp  CalibMainWindow.h  CalibMainWindow.ui  HuboAchDriver.cpp  HuboAchDriver.h  HuboDataModel.cpp  HuboDataModel.h  HuboWidget.cpp  HuboWidget.h  calibrate.cpp
mzcommon/: TimeUtil.h  glstuff.h  testwrl.cpp
python/: ZmpPreview.py  plotzmp.py
src/: CMakeLists.txt  HuboKin.cpp  HuboKin.h  HuboPlus.cpp  HuboPlus.h  ZmpPreview.h  fakerave.cpp  fakerave.h  reconcile.cpp  testik.cpp  testkin.cpp  testzmp.cpp  walkdemo.cpp
zmp/: CMakeLists.txt  MeshSurface.cpp  MeshSurface.h  VectorViewer.cpp  corner.stla  draw-footprints.h  footprint-example.cpp  footprint-gnuplot.cpp  footprint-opengl.cpp  footprint-test.cpp  footprint.cpp  footprint.h  gait-test.cpp  gait-timer-test.cpp  gait-timer.cpp  gait-timer.h  gait.cpp  gait.h  hubo-zmp.h  stl_1.cpp  stla_io.hpp  swing-test.cpp  swing.cpp  swing.h  zmp-daemon.cpp  zmp-daemon.h  zmpdemo.cpp  zmpgui.cpp  zmpwalkgenerator.cpp  zmpwalkgenerator.h
